--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
 
 <div ng-cloak>
     <md-content>
-        <md-tabs md-dynamic-height md-swipe-content md-stretch-tabs="always" md-selected="6" >
-            <md-tab dir="rtl" ng-repeat="view in tabs" ng-click="showSimpleToast(view.name)" label="{{view.name}}">
+        <md-tabs md-dynamic-height md-swipe-content md-stretch-tabs="always" md-selected="6" id="tabs" >
+            <md-tab dir="rtl" ng-repeat="tab in tabs" ng-click="goToByScroll(tab.id)" label="{{tab.name}}">
 
             </md-tab>
         </md-tabs>
