--- a/directives/bar/bar.html
+++ b/directives/bar/bar.html
@@ -1,10 +1,10 @@
-<div ng-controller="BarController" layout="row" style="width: 100vw">
-    <div ng-repeat="tab in tabs" layout="row" layout-align="center center"
-         style="width: 45%" >
-        <a href="#" class="tab">{{tab.title}}</a>
-    </div>
-    <img class="logo" src="img/logo.png">
-    <div ng-repeat="tab in tabs2" layout="column" style="width: 45%" layout-align="center center">
-        <a href="#" class="tab">{{tab.title}}</a>
-    </div>
+<div class="bar_wrapper md-whiteframe-5dp" ng-controller="BarController" layout="row">
+        <div ng-repeat="tab in tabs" layout="row" layout-align="center start" class="bar_content_wrapper"
+             style="width: 45%">
+            <a href="" ng-click="tab.id != null ? scrollTo(tab.id) : null" class="tab">{{tab.title}}</a>
+        </div>
+        <img class="logo" src="img/logo.png">
+        <div ng-repeat="tab in tabs2" layout="column" style="width: 45%" layout-align="start center" class="bar_content_wrapper">
+            <a href="" ng-click="tab.id != null ? scrollTo(tab.id) : null" class="tab">{{tab.title}}</a>
+        </div>
 </div>
