--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h1 class="yellow_title">חומרי למידה</h1>
             </div>
             <div layout="row" layout-align="center center">
-                <p class="white_text text_content">kamsdklfdsklajklvnjslfj vnsjdkanjvhsaduibvkamsdklfdsklajklvnjslfj
+                <p class="white_text text_content" style="padding-left: 10%;padding-right: 10%">kamsdklfdsklajklvnjslfj vnsjdkanjvhsaduibvkamsdklfdsklajklvnjslfj
                     vnsjdkanjvhsaduibvkamsdklfdsklajklvnjslfj vnsjdkanjvhsaduibvkamsdklfdsklajklvnjslfj
                     vnsjdkanjvhsaduibvkamsdklfdsklajklvnjslfj vnsjdkanjvhsaduibvkamsdklfdsklajklvnjslfj
                     vnsjdkanjvhsaduibvkamsdklfdsklajklvnjslfj vnsjdkanjvhsaduibvkamsdklfdsklajklvnjslfj
@@ -143,6 +143,23 @@
             </div>
             <div layout="row" layout-align="center start">
                 <a href="#" class="white_anchor read_more">קרא עוד</a>
+            </div>
+        </div>
+
+        <div class="section school blue_background">
+            <div layout="column" layout-align="start center">
+                <h1 class="yellow_title">בית ספר להישגים</h1>
+            </div>
+            <div layout="row" layout-align="center center">
+                <p class="white_text text_content" style="padding-right: 10%;padding-left: 10%">בית ספר להישגים הוקם כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.
+                    המיזם מציע לראשונה בישראל  תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.
+                    הראשונה מבין התוכניות שבית הספר הישגים מציעה נקראת: "להצטיין בכל המגרשים"
+                    "לצטיין בכל המגרשים" - תוכנית לשעות הצהריים המותאמת לתלמידי יסודי במתחם בית הספר, התוכנית נותנת מענה בשלושה תחומים התורמים ומעצבים את הילד, חינוך לערכים, השכלה,כלים ללמידה ופעילות גופנית.  הפעילות מועברת ע"י מורים, מדריכים ומאמני ספורט מקצועיים.
+                </p>
+
+            </div>
+            <div layout="row" layout-align="center start">
+                <img layout-align="center center" src="img/school.png">
             </div>
         </div>
     </div>
