Started bottom sheet, logo fix, added fab

--- a/directives/bar/bar.html
+++ b/directives/bar/bar.html
@@ -3,7 +3,7 @@
              style="width: 45%">
             <a href="" ng-click="tab.id != null ? scrollTo(tab.id) : null" class="tab">{{tab.title}}</a>
         </div>
-        <img class="logo animated slideInDown" src="img/logo.png" >
+        <img class="logo " src="img/logo.jpg" >
         <div ng-repeat="tab in tabs2" layout="column" style="width: 45%" layout-align="start center" class="bar_content_wrapper animated slideInRight ">
             <a href="" ng-click="tab.id != null ? scrollTo(tab.id) : null" class="tab">{{tab.title}}</a>
         </div>
