--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
             </div>
         </div>
         <hr class="cool_hr" flex/>
-        <div class="section branches" layout="row" layout-align="start start">
+        <div class="section branches" layout="row" layout-align="end start">
             <!--   <iframe src="https://www.google.com/maps/d/embed?mid=zw8WmSnoSrYE.k0FAZg8Q-A98" width="70%"
                        height="320"></iframe>-->
             <img href="#" onclick="window.open('https://www.google.com/maps/d/embed?mid=zw8WmSnoSrYE.k0FAZg8Q-A98')"
                  src="img/map.png" class="branches_map_image">
             <div layout="column" layout-align="start start" dir="rtl"
-                 class="braunches_wrapper">
+                 class="branches_wrapper">
                 <h1 dir="rtl">סניפים</h1>
                 <h3 ng-repeat="braunch in braunches" class="no_margins_h3" ng-class="{'braunch_title':braunch.title}">
                     {{braunch.text}}</h3>
@@ -187,6 +187,13 @@
             </div>
         </div>
     </div>
+    <md-fab-speed-dial>
+        <md-fab-trigger>
+            <md-button aria-label="info" class="md-fab md-warn">
+                <md-icon md-svg-src="img/info.svg"></md-icon>
+            </md-button>
+        </md-fab-trigger>
+    </md-fab-speed-dial>
 </div>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
