--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <md-grid-list
                             ng-show="bigScreen"
                             md-cols="3"
-                            md-row-height="2:2"
+                            md-row-height="3:2"
                             md-gutter="12px" md-gutter-gt-sm="8px">
                         <md-grid-tile class="plans_item" ng-repeat="plan in plans2">
                             <md-icon ng-show="bigScreen" md-svg-src="img/{{plan.icon}}.svg" style="color: #ffffff;"
@@ -187,7 +187,8 @@
             </div>
         </div>
     </div>
-    <md-fab-speed-dial>
+    <
+    <md-fab-speed-dial class="fab">
         <md-fab-trigger>
             <md-button aria-label="info" class="md-fab md-warn">
                 <md-icon md-svg-src="img/info.svg"></md-icon>
