--- a/index.html
+++ b/index.html
@@ -189,10 +189,11 @@
 
         <div class="section school " style="overflow: hidden">
             <div layout="column" layout-align="start center">
-                <h1 class="yellow_title">בית ספר להישגים</h1>
+                <h1 class="red_title">בית ספר להישגים</h1>
             </div>
-            <div layout="row" layout-align="center center">
-                <p class=" text_content" style="padding-right: 10%;padding-left: 10%">בית ספר להישגים הוקם
+            <div layout="row" layout-align="center center" class="padded_content">
+                <img src="img/school.png" style="padding-right: 5%">
+                <p style="width: 50%;padding-left: 5%" dir="rtl" >בית ספר להישגים הוקם
                     כמיזם סטארט-אפ חינוכי ע"י גיא קורן, אילן ורועי שר.
                     המיזם מציע לראשונה בישראל תוכניות ייחודיות המשלבת לימודים ופעילות גופנית.
                     הראשונה מבין התוכניות שבית הספר הישגים מציעה נקראת: "להצטיין בכל המגרשים"
@@ -200,11 +201,8 @@
                     בשלושה תחומים התורמים ומעצבים את הילד, חינוך לערכים, השכלה,כלים ללמידה ופעילות גופנית. הפעילות
                     מועברת ע"י מורים, מדריכים ומאמני ספורט מקצועיים.
                 </p>
+            </div>
 
-            </div>
-            <div layout="row" layout-align="center start">
-                <img layout-align="center center" src="img/school.png">
-            </div>
         </div>
     </div>
 
